--- a/WebCodeFirst/Dockerfile
+++ b/WebCodeFirst/Dockerfile
@@ -19,4 +19,4 @@ COPY --from=build /app/out .
 EXPOSE 80
 
 # Command to run the application
-ENTRYPOINT ["dotnet", "CareerCrafter.dll"]
+ENTRYPOINT ["dotnet", "WebCodeFirst.dll"]
